--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Barlow:ital,wght@0,400;0,500;1,700&family=Cedarville+Cursive&family=Edu+VIC+WA+NT+Beginner:wght@400;600&family=Inter:wght@200;300;500;700&family=Manrope:wght@500;700&family=Montserrat:wght@200&family=Poppins:ital,wght@0,200;0,400;0,600;1,400&family=Raleway:wght@400;700&family=Roboto:wght@400;700;900&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Barlow", sans-serif;
+}
+button {
+  border: none;
+  width: 100px;
+  padding: 5px;
+  border-radius: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #ed2c49;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.wrapper {
   background-color: #282c34;
-  min-height: 100vh;
+  color: #fff;
+  height: 100vh;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fact--container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  min-width: 300px;
+  width: 90%;
+  font-size: 16px;
+  font-family: "Barlow Condensed";
+  font-weight: 500;
+  background-color: #737373;
+}
+.container--header {
+  font-size: 32px;
+  width: 100%;
+}
+.title {
+  display: flex;
+  justify-content: space-between;
+  font-size: 32px;
+}
+
+.counter--number {
+  border-radius: 50%;
+  background-color: #ed2c49;
+  font-size: 0.8em;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 40px;
+  height: 40px;
+  opacity: 100;
+  position: relative;
+  transition: all 0.5s ease-in;
+}
+.hidden--text {
+  transition: all 0.5s ease-in;
+  position: absolute;
+  top: 0;
+  width: 80%;
+  opacity: 0;
+  font-size: 0.8em;
+}
+.counter--number:hover {
+  width: 200px;
+  border-radius: 15px;
+  background-color: #aad742;
+  display: hidden;
+  transition: all 0.5s ease-in;
+  opacity: 1;
+}
+.counter--number:hover .hidden--text {
+  width: 200px;
+  border-radius: 15px;
+  background-color: #aad742;
+  display: block;
+  opacity: 1;
+  transition: all 0.5s ease-in;
+  display: block;
+  top: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.container--footer {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* media query for bigger screen */
+@media screen and (min-width: 600px) {
+  .fact--container {
+    font-size: 32px;
   }
-  to {
-    transform: rotate(360deg);
+  .container--title {
+    font-size: 48px;
+  }
+  button {
+    width: 200px;
+    font-size: 32px;
   }
 }
